* New option for "Minimum font-size" in preferences. (stranger)
* New option for "Maximum font-size" in preferences. (stranger)
* New option for "Background type" in preferences. (stranger)
* New option for "image amounts" in preferences. (stranger)
* New option for "polygon points" in preferences. (stranger)
* New option for "check groups" in preferences. (stranger)
* New option for "skip characters" in preferences. (stranger)
* New option for "disable captcha" in preferences. (stranger)
* New Function "icms_conv_nr2local". (stranger)
* New Function "icms_conv_local2nr". (stranger)
* New Function "Icms_getMonthNameById". (stranger)
* New Function "div". (stranger)
* New Function "gregorian_to_jalali". (stranger)
* New Function "jalali_to_gregorian". (stranger)
* New Function "mstart". (stranger)
* New Function "lastday". (stranger)
* New Function "jmaketime". (stranger)
* New Function "jdate". (stranger)

'''Improved'''
* If an email notification is sent on PM, the user's email will appear in the From header if he has activated "Allow other users to view my email address" (malanciaut)
* Updated system to version 1.11. (stranger)
* Updated HTML Purifier library from 3.1.1 to 3.2.0 (vaughan)
* smarty values to make them use both $xoops_value and $icms_value. (stranger)
* Fixed issues in redirection in RTL mode. (stranger)
* Updated xoops_getcss to read rtl styles. (stranger)
* Method we use RTL. (stranger)
* Removed theme_rtl system at all. (stranger)
* Updated Snoopy from v1.2.3 to v1.2.4. (stranger)
* Added check to preferences, if closesite is true (site closed) it is no longer possible to change password encryption until site is reopened. (vaughan)
* Updated TinyMCE to version 3.2.1. (stranger)
* Updated TCPDF to version 4.2.007. (stranger)
* ICMS Captcha Class. (stranger)