@@ -33,6 +33,7 @@ ImpressCMS ChangeLog
 * New option for "image amounts" in preferences. (stranger)
 * New option for "polygon points" in preferences. (stranger)
 * New option for "check groups" in preferences. (stranger)
+* We are now checking Groups that are free from Captcha, as opposed to groups which need captcha (malanciault)
 * New option for "skip characters" in preferences. (stranger)
 * New option for "disable captcha" in preferences. (stranger)
 * New Function "icms_conv_nr2local". (stranger)
